fix(signup): update logo class and adjust padding for better alignment

--- a/css/pages/signup.css
+++ b/css/pages/signup.css
@@ -24,7 +24,7 @@ main {
 
 .logo {
     display: flex;
-    text-align: center;
+    
     font-size: 25px;
     font-weight: 700;
     color: #a09786;
@@ -34,12 +34,13 @@ main {
 }
 
 p {
-    padding-left: 10px;
+    padding-left: 15px;
     margin: 0;
 }
 
-.icon {
+.icon-logo {
     height: 30px;
+    width: auto;
 }
 
 h1 {
